syntax = "proto3";
option go_package = "github.com/eugenshima/PriceService";

message Shares {
    string shareName = 1;
    double sharePrice = 2;
}

service PriceService {
    rpc GetLatestPrices(LatestPriceRequest) returns (stream LatestPriceResponse);
}

message LatestPriceRequest {
    string shareName = 1;
}

message LatestPriceResponse {
    repeated Shares shares = 1;
    string ID = 2;
}